Corrige testes e quebra de build maven